// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`naive_bayes:GaussianNB Should fit only accept X and y if number of attributes is same 1`] = `
ValidationClassMismatch {
  "message": "Number of labels=3 does not math number of samples=7",
  "name": "ValidationClassMismatch",
}
`;

exports[`naive_bayes:GaussianNB Should fit only accept X and y if number of attributes is same 2`] = `
ValidationClassMismatch {
  "message": "Number of labels=7 does not math number of samples=3",
  "name": "ValidationClassMismatch",
}
`;

exports[`naive_bayes:GaussianNB Should not fit non array for testing data 1`] = `
ValidationError {
  "message": "validateFitInputs received a non-array input y",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:GaussianNB Should not fit non array for testing data 2`] = `
ValidationError {
  "message": "validateFitInputs received a non-array input y",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:GaussianNB Should not fit non array for testing data 3`] = `
ValidationClassMismatch {
  "message": "Number of labels=0 does not math number of samples=7",
  "name": "ValidationClassMismatch",
}
`;

exports[`naive_bayes:GaussianNB Should not fit non array for training data 1`] = `
ValidationError {
  "message": "validateFitInputs received a non-array input X",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:GaussianNB Should not fit non array for training data 2`] = `
ValidationClassMismatch {
  "message": "Number of labels=2 does not math number of samples=3",
  "name": "ValidationClassMismatch",
}
`;

exports[`naive_bayes:GaussianNB Should not fit non array for training data 3`] = `
ValidationError {
  "message": "validateFitInputs received a non-array input X",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:GaussianNB should predict only accept X as matrix 1`] = `
ValidationError {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:GaussianNB should predict only accept X as matrix 2`] = `
ValidationError {
  "message": "validateMatrix2D has received a non-array argument",
  "name": "ValidationError",
}
`;

exports[`naive_bayes:GaussianNB should predict only accept X as matrix 3`] = `
Validation2DMatrixError {
  "message": "The matrix is not 2D shaped: [1,2,3] of [3]",
  "name": "Validation2DMatrixError",
}
`;
